--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!doctype html>
-<html ng-app="libros">
+<html ng-app="app">
 	<head>
-		<title>Hello AngularJS</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js">
+		<meta charset="UTF-8">
+		<title>Consumiendo RestFul</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 		<script src="libros.js"></script>
 	</head>
 
 	<body>
-		<div ng-controller="Hello">
-			<p>The ID is {{libros.titulo}}</p>
-			<p>The content is {{libros.descripcion}}</p>
+		<div class="jumbotron" style="text-align: center;">
+			<h1>Consumo de RESTful</h1>
+		</div>
+		<div ng-controller="Libros" class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-8">
+				<table class="table table-bordered">
+					<tr>
+						<th>Libro</th>
+						<th>Descripción</th>
+					</tr>
+					<tr ng-repeat="libro in libros['libros']">
+						<td>{{ libro.titulo }}</td>
+						<td>{{ libro.descripcion }}</td>
+					</tr>
+				</table>
+			</div>
+			<div class="col-md-2"></div>
+		</div>
+		<hr >
+		<div ng-controller="AgregaLibro" class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-8">
+				<form class="form-inline">
+				  <div class="form-group">
+				    <label for="titulo">Titulo del libro</label>
+				    <input type="text" class="form-control" id="titulo" ng-model="titulo" required>
+				  </div>
+				  <div class="form-group">
+				    <label for="descripcion">Descripcion</label>
+				    <input type="text" class="form-control" id="descripcion" ng-model="descripcion" required>
+				  </div>
+				  <button ng-click="EnviarDatos()" class="btn btn-primary">Agregar</button>
+				</form>
+				<div class="row">
+					<p class="bg-success">{{ PostDataResponse.mensaje }}</p>
+				</div>
+				<div class="row">
+					<p class="bg-danger">{{ PostDataResponse.error }}</p>
+				</div>
+			</div>
+			<div class="col-md-2"></div>
 		</div>
 	</body>
-</html>
+</html
